Fixed image alignment

--- a/styles.css
+++ b/styles.css
@@ -70,7 +70,7 @@ small {
   background: linear-gradient(to right, transparent 0%, transparent 50%, var(--primary) 50%, var(--primary) 100%);
   width: 100%;
   height: 340px;
-  margin-top: -142px;
+  margin-top: -145px;
 }
 
 /* hide if screen narrow */
@@ -102,7 +102,7 @@ small {
   position: relative;
   height: 478px;
   width: 439px;
-  margin-top: -82px;
+  margin-top: -87px;
 }
 
 #fade_portrait img {
